force-app/main/default/objects/Invoice_Creation__c/Invoice_Creation__c.object-meta.xml
<CustomObject>
    <label>Invoice Creation</label>
    <nameField>
        <displayFormat>INV-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Creations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>