force-app/main/default/objects/Invoice_Creation__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Creations</relationshipLabel>
    <relationshipName>Invoice_Creations</relationshipName>
    <type>Lookup</type>
</CustomField>