force-app/main/default/objects/Invoice_Creation__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <formula>Total__c  -  Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>