force-app/main/default/objects/Invoice_Creation__c/fields/Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Days_Overdue__c</fullName>
    <formula>TODAY() - Due_Date__c</formula>
    <label>Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>