force-app/main/default/objects/Invoice_Creation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Days_Overdue__c  = 0, &quot;Paid&quot;,
    IF(Days_Overdue__c  &gt; 0, &quot;Overdue&quot;, 
    IF(Days_Overdue__c  &lt; 0, &quot;Due&quot;, &quot;&quot;))
    )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>