force-app/main/default/objects/Invoice_Creation__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>